--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "18.1.0",
+    "react-loading": "^2.0.3",
     "react-score-indicator": "^2.2.1"
   },
   "devDependencies": {
